--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rayment",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Decentralized GPU rendering marketplace with instant crypto payments on Solana",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -47,6 +47,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rayment/rayment"
+    "url": "https://github.com/Hadjipavlis/rayment"
   }
 }
